--- a/index.html
+++ b/index.html
@@ -20,30 +20,32 @@
               <p style="text-align:center">
                 <name>Hao Zheng (郑浩)</name>
               </p>
-              <p>I am earning my Master degree at School of Optoelectronic Engineering, Xi’an Technological University, supervised by AP. <a href="https://booler.github.io/">Guohui Wang</a>. My research interests focus on Deep Learning, Computer Vision, and Image Processing. 
+              <p>I am earning my Master degree at School of Optoelectronic Engineering, Xi’an Technological University, supervised by A.P. <a href="https://booler.github.io/">Guohui Wang</a>.
               </p>
+              <p> My research interests focus on Deep Learning, Computer Vision, and Image Processing. </p>
               <p>
 
               <p style="text-align:center">
                 <a href="mailto:lbqdhg@163.com">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp
+                <a href="https://www.researchgate.net/profile/Hao-Zheng-97">ResearchGate</a> &nbsp/&nbsp
                 <a href="https://github.com/lbqdhg">Github</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/lbqdhg.jpg" class="hoverZoomLink"></a>
+              <a href="images/lbqdhg.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/lbqdhg.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Publications</heading>
             </td>
-          </tr>
-          
+          </tr>          
         </tbody></table>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 		
    
@@ -73,7 +75,7 @@
           <tr onmouseout="malle_stop()" onmouseover="malle_start()">
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://www.frontiersin.org/articles/10.3389/fphy.2021.819019/full">
-                <papertitle>A robust corner detection method by improved YOLOX</papertitle>
+                <papertitle>A Robust Checkerboard Corner Detection Method for Camera Calibration Based on Improved YOLOX</papertitle>
               </a>
               <br>    
               <a href="https://booler.github.io/">Guohui Wang </a>,  
@@ -120,7 +122,7 @@
                 <papertitle>Recognizing strawberry appearance quality using different combinations of deep feature and classifiers</papertitle>
               </a>
               <br>
-              Xunchen Li, 
+              Xuchen Li, 
               Changlong Cai, 
               <strong>Hao Zheng </strong>,
               Hongfei Zhu
@@ -136,6 +138,46 @@
               <p></p>
             </td>
           </tr>
+
+
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Competitions</heading>
+            </td>
+          </tr>          
+        </tbody></table>
+
+
+        <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <td style="padding:20px;width:75%;vertical-align:middle">
+          <p>“华为杯”第十八届研究生数学建模竞赛&emsp;<strong>全国一等奖 </strong></p> 
+          </td>
+        </tr>
+
+
+        <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <td style="padding:20px;width:75%;vertical-align:middle">
+          <p>第十六届中国研究生电子设计竞赛—技术赛&emsp;<strong>全国三等奖、西北赛区一等奖 </strong></p> 
+          </td>
+        </tr>
+
+        <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <td style="padding:20px;width:75%;vertical-align:middle">
+          <p>第十六届中国研究生电子设计竞赛—商业赛&emsp;<strong>西北赛区二等奖 </strong></p> 
+          </td>
+        </tr>
+
+        
+        <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <td style="padding:20px;width:75%;vertical-align:middle">
+          <p>第十一届全国大学生数学竞赛&emsp;<strong>全国三等奖、省级二等奖 </strong></p> 
+          </td>
+        </tr>
+
+
+
 
 </body>
 
