--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
               <p style="text-align:center">
                 <a href="mailto:lbqdhg@163.com">Email</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.researchgate.net/profile/Hao-Zheng-97">ResearchGate</a> &nbsp/&nbsp
                 <a href="https://github.com/lbqdhg">Github</a>
               </p>
@@ -139,6 +138,27 @@
             </td>
           </tr>
 
+          <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="">
+                <papertitle>A New Calibration Method of Stereo Line-Scan Cameras for 2D Coordinate Measurement</papertitle>
+              </a>
+              <br>
+              <a href="https://booler.github.io/">Guohui Wang </a>, 
+              Linjie Zhao,  
+              <strong>Hao Zheng </strong>,
+              <p></p>
+              <br>
+
+              <em>Frontiers in Physics</em>,&emsp;accept
+              <br>
+              <p></p>
+              <a href="https://yifanjiang.net/MalleConv.html">project page</a>
+              /
+              <a href="https://arxiv.org/abs/2201.00392">arXiv</a>
+              <p></p>
+            </td>
+          </tr>
 
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
