update other papers

--- a/index.html
+++ b/index.html
@@ -63,13 +63,57 @@
               <em>Journal of Food Measurement and Characterization</em>, 2022
               <br>
               <p></p>
-              <a href="https://yifanjiang.net/MalleConv.html">project page</a>
+              <a href="">project page</a>
               /
-              <a href="https://arxiv.org/abs/2201.00392">arXiv</a>
+              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr> 
           
+          <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="">
+                <papertitle>Identifying strawberry appearance quality by Vision Transformers and support vector machine</papertitle>
+              </a>
+              <br>
+              <strong>Hao Zheng </strong>,
+              <a href="https://booler.github.io/">Guohui Wang </a>,  
+              Xuchen Li
+              <p></p>
+              <br>
+
+              <em>Journal of Food Process and Engineering</em>, Minor Revision
+              <br>
+              <p></p>
+              <a href="">project page</a>
+              /
+              <a href="">arXiv</a>
+              <p></p>
+            </td>
+          </tr> 
+
+          <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="">
+                <papertitle>YOLOX-Dense: a detection algorithm for cherry tomatoes based on YOLOX and DenseNet</papertitle>
+              </a>
+              <br>
+              <strong>Hao Zheng </strong>,
+              <a href="https://booler.github.io/">Guohui Wang </a>,  
+              Xuchen Li
+              <p></p>
+              <br>
+
+              <em>Journal of Food Measurement and Characterization</em>, Minor Revision
+              <br>
+              <p></p>
+              <a href="">project page</a>
+              /
+              <a href="">arXiv</a>
+              <p></p>
+            </td>
+          </tr> 
+
         
           <tr onmouseout="malle_stop()" onmouseover="malle_start()">
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -88,7 +132,7 @@
               <p></p>
               <a href="https://yifanjiang.net/MalleConv.html">project page</a>
               /
-              <a href="https://arxiv.org/abs/2201.00392">arXiv</a>
+              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr>
@@ -107,9 +151,9 @@
               <em>Frontiers in Physics</em>, 2022
               <br>
               <p></p>
-              <a href="https://yifanjiang.net/MalleConv.html">project page</a>
+              <a href="">project page</a>
               /
-              <a href="https://arxiv.org/abs/2201.00392">arXiv</a>
+              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr>
@@ -131,9 +175,9 @@
               <em>Journal of Food Process and Engineering</em>, 2022
               <br>
               <p></p>
-              <a href="https://yifanjiang.net/MalleConv.html">project page</a>
+              <a href="">project page</a>
               /
-              <a href="https://arxiv.org/abs/2201.00392">arXiv</a>
+              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr>
@@ -146,20 +190,45 @@
               <br>
               <a href="https://booler.github.io/">Guohui Wang </a>, 
               Linjie Zhao,  
-              <strong>Hao Zheng </strong>,
+              <strong>Hao Zheng </strong>
               <p></p>
               <br>
 
               <em>Frontiers in Physics</em>,&emsp;accept
               <br>
               <p></p>
-              <a href="https://yifanjiang.net/MalleConv.html">project page</a>
+              <a href="">project page</a>
               /
-              <a href="https://arxiv.org/abs/2201.00392">arXiv</a>
+              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr>
 
+
+          <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://link.springer.com/article/10.1007/s11694-021-01010-9">
+                <papertitle>E-AlexNet: quality evaluation of strawberry based on machine learning</papertitle>
+              </a>
+              <br>
+              Jiangong Ni,
+              Jiyue Gao,
+              Juan Li,
+              Haoyan Yang,
+              <strong>Hao Zheng </strong>
+              Zhongzhi Han
+              <p></p>
+              <br>
+
+              <em>Journal of Food Measurement and Characterization</em>, 2021
+              <br>
+              <p></p>
+              <a href="">project page</a>
+              /
+              <a href="">arXiv</a>
+              <p></p>
+            </td>
+          </tr>
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
