--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               Jiyue Gao,
               Juan Li,
               Haoyan Yang,
-              <strong>Hao Zheng </strong>
+              <strong>Hao Zheng </strong>,
               Zhongzhi Han
               <p></p>
               <br>
@@ -229,6 +229,25 @@
               <p></p>
             </td>
           </tr>
+
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Invited Talk</heading>
+            </td>
+
+          </tr> 
+
+           <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <td style="padding:20px;width:75%;vertical-align:middle">
+          <p><strong>Deep learning-based image detection and classification technology under complex background</strong></p> 
+          <p>In Computational Optical Measurement and Education (COME), Xi'an, China, 2022, 24-25/June</p>
+          </td>
+        </tr>
+
+        </tbody></table>
+
+
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
