update Conferences tag

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Invited Talk</heading>
+              <heading>Conferences</heading>
             </td>
 
           </tr> 
@@ -241,7 +241,7 @@
            <tr onmouseout="malle_stop()" onmouseover="malle_start()">
           <td style="padding:20px;width:75%;vertical-align:middle">
           <p><strong>Deep learning-based image detection and classification technology under complex background</strong></p> 
-          <p>In Computational Optical Measurement and Education (COME), Xi'an, China, 2022, 24-25/June</p>
+          <p>In proceeding of the 2022 Computational Optical Measurement and Education (COME), Xi'an, China, 2022, 24-25/June</p>
           </td>
         </tr>
 
