--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <p></p>
               <br>
 
-              <em>Journal of Food Measurement and Characterization</em>, 2022
+              <em>Journal of Food Measurement and Characterization</em>, 2022; 16:2789–2800
               <br>
               <p></p>
               <a href="">project page</a>
@@ -72,7 +72,7 @@
           
           <tr onmouseout="malle_stop()" onmouseover="malle_start()">
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="">
+              <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/jfpe.14132">
                 <papertitle>Identifying strawberry appearance quality by Vision Transformers and support vector machine</papertitle>
               </a>
               <br>
@@ -82,7 +82,7 @@
               <p></p>
               <br>
 
-              <em>Journal of Food Process and Engineering</em>, Minor Revision
+              <em>Journal of Food Process and Engineering</em>, 2022; e14132
               <br>
               <p></p>
               <a href="">project page</a>
@@ -104,7 +104,7 @@
               <p></p>
               <br>
 
-              <em>Journal of Food Measurement and Characterization</em>, Minor Revision
+              <em>Journal of Food Measurement and Characterization</em>, Accept
               <br>
               <p></p>
               <a href="">project page</a>
@@ -127,7 +127,7 @@
               <p></p>
               <br>
 
-              <em>Frontiers in Physics</em>, 2022
+              <em>Frontiers in Physics</em>, 2022;9:819019
               <br>
               <p></p>
               <a href="https://yifanjiang.net/MalleConv.html">project page</a>
@@ -148,7 +148,7 @@
               <p></p>
               <br>
 
-              <em>Frontiers in Physics</em>, 2022
+              <em>Frontiers in Physics</em>, 2022; 9:817102
               <br>
               <p></p>
               <a href="">project page</a>
@@ -172,7 +172,7 @@
               <p></p>
               <br>
 
-              <em>Journal of Food Process and Engineering</em>, 2022
+              <em>Journal of Food Process and Engineering</em>, 2022; e13982
               <br>
               <p></p>
               <a href="">project page</a>
@@ -184,7 +184,7 @@
 
           <tr onmouseout="malle_stop()" onmouseover="malle_start()">
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="">
+              <a href="https://www.frontiersin.org/articles/10.3389/fphy.2022.892157/full">
                 <papertitle>A New Calibration Method of Stereo Line-Scan Cameras for 2D Coordinate Measurement</papertitle>
               </a>
               <br>
@@ -194,8 +194,7 @@
               <p></p>
               <br>
 
-              <em>Frontiers in Physics</em>,&emsp;accept
-              <br>
+              <em>Frontiers in Physics</em>,&emsp;2022; 10:892157
               <p></p>
               <a href="">project page</a>
               /
@@ -220,8 +219,7 @@
               <p></p>
               <br>
 
-              <em>Journal of Food Measurement and Characterization</em>, 2021
-              <br>
+              <em>Journal of Food Measurement and Characterization</em>, 2021; 15:4530–4541
               <p></p>
               <a href="">project page</a>
               /
