update YOLOX-Dense-CT link and doi！

--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@
               <p></p>
               <br>
 
-              <em>Journal of Food Measurement and Characterization</em>, 2022; 16:2789–2800
+              <em>Journal of Food Measurement and Characterization</em>, 2022; 16:2789–2800 &emsp;<a href="https://doi.org/10.1007/s11694-022-01396-0">DOI</a>
               <br>
               <p></p>
-              <a href="">project page</a>
-              /
-              <a href="">arXiv</a>
+             
               <p></p>
             </td>
           </tr> 
@@ -82,20 +80,17 @@
               <p></p>
               <br>
 
-              <em>Journal of Food Process and Engineering</em>, 2022; e14132
+              <em>Journal of Food Process and Engineering</em>, 2022; e14132 &emsp;<a href="https://doi.org/10.1111/jfpe.14132">DOI</a>
               <br>
               <p></p>
-              <a href="">project page</a>
-              /
-              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr> 
 
           <tr onmouseout="malle_stop()" onmouseover="malle_start()">
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="">
-                <papertitle>YOLOX-Dense: a detection algorithm for cherry tomatoes based on YOLOX and DenseNet</papertitle>
+              <a href="https://link.springer.com/article/10.1007/s11694-022-01553-5">
+                <papertitle>YOLOX-Dense-CT: a detection algorithm for cherry tomatoes based on YOLOX and DenseNet</papertitle>
               </a>
               <br>
               <strong>Hao Zheng </strong>,
@@ -104,12 +99,9 @@
               <p></p>
               <br>
 
-              <em>Journal of Food Measurement and Characterization</em>, Accept
+              <em>Journal of Food Measurement and Characterization</em>, 2022 &emsp;<a href="https://doi.org/10.1007/s11694-022-01553-5">DOI</a>
               <br>
               <p></p>
-              <a href="">project page</a>
-              /
-              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr> 
@@ -127,12 +119,9 @@
               <p></p>
               <br>
 
-              <em>Frontiers in Physics</em>, 2022;9:819019
+              <em>Frontiers in Physics</em>, 2022; 9:819019   &emsp;<a href="https://doi.org/10.3389/fphy.2021.819019">DOI</a>
               <br>
               <p></p>
-              <a href="https://yifanjiang.net/MalleConv.html">project page</a>
-              /
-              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr>
@@ -148,12 +137,9 @@
               <p></p>
               <br>
 
-              <em>Frontiers in Physics</em>, 2022; 9:817102
+              <em>Frontiers in Physics</em>, 2022; 9:817102 &emsp;<a href="https://doi.org/10.3389/fphy.2021.817102">DOI</a>
               <br>
               <p></p>
-              <a href="">project page</a>
-              /
-              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr>
@@ -172,12 +158,9 @@
               <p></p>
               <br>
 
-              <em>Journal of Food Process and Engineering</em>, 2022; e13982
+              <em>Journal of Food Process and Engineering</em>, 2022; e13982 &emsp;<a href="https://doi.org/10.1111/jfpe.13982">DOI</a>
               <br>
               <p></p>
-              <a href="">project page</a>
-              /
-              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr>
@@ -194,11 +177,8 @@
               <p></p>
               <br>
 
-              <em>Frontiers in Physics</em>,&emsp;2022; 10:892157
+              <em>Frontiers in Physics</em>,&emsp;2022; 10:892157 &emsp;<a href="https://doi.org/10.3389/fphy.2022.892157">DOI</a>
               <p></p>
-              <a href="">project page</a>
-              /
-              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr>
@@ -219,11 +199,8 @@
               <p></p>
               <br>
 
-              <em>Journal of Food Measurement and Characterization</em>, 2021; 15:4530–4541
+              <em>Journal of Food Measurement and Characterization</em>, 2021; 15:4530–4541  &emsp;<a href="https://doi.org/10.1007/s11694-021-01010-9">DOI</a>
               <p></p>
-              <a href="">project page</a>
-              /
-              <a href="">arXiv</a>
               <p></p>
             </td>
           </tr>
