--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <p></p>
               <br>
 
-              <em>Journal of Food Measurement and Characterization</em>, 2022 &emsp;<a href="https://doi.org/10.1007/s11694-022-01553-5">DOI</a>
+              <em>Journal of Food Measurement and Characterization</em>, 2022; 16:4788–4799 &emsp;<a href="https://doi.org/10.1007/s11694-022-01553-5">DOI</a>
               <br>
               <p></p>
               <p></p>
