--- a/index.html
+++ b/index.html
@@ -248,13 +248,19 @@
 
         <tr onmouseout="malle_stop()" onmouseover="malle_start()">
           <td style="padding:20px;width:75%;vertical-align:middle">
-          <p>第十六届中国研究生电子设计竞赛—技术赛&emsp;<strong>全国三等奖、西北赛区一等奖 </strong></p> 
+          <p>第十六届中国研究生电子设计竞赛&emsp;<strong>全国三等奖、西北赛区一等奖 </strong></p> 
           </td>
         </tr>
 	
 	 <tr onmouseout="malle_stop()" onmouseover="malle_start()">
           <td style="padding:20px;width:75%;vertical-align:middle">
           <p>第八届中国国际“互联网+”大学生创新创业大赛&emsp;<strong>陕西省银奖、铜奖 </strong></p> 
+          </td>
+        </tr>
+	
+	        <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <td style="padding:20px;width:75%;vertical-align:middle">
+          <p>第十六届中国研究生电子设计竞赛—商业赛&emsp;<strong>西北赛区二等奖 </strong></p> 
           </td>
         </tr>
 
