--- a/index.html
+++ b/index.html
@@ -244,6 +244,13 @@
           <p>“华为杯”第十八届研究生数学建模竞赛&emsp;<strong>全国一等奖 </strong></p> 
           </td>
         </tr>
+	
+	 <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <td style="padding:20px;width:75%;vertical-align:middle">
+          <p>“中国光谷·华为杯”第十九届研究生数学建模竞赛&emsp;<strong>全国二等奖 </strong></p> 
+          </td>
+        </tr>
+		
 
 
         <tr onmouseout="malle_stop()" onmouseover="malle_start()">
