--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <tr onmouseout="malle_stop()" onmouseover="malle_start()">
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://link.springer.com/article/10.1007/s11694-022-01396-0">
-                <papertitle>Swin-MLP A Strawberry Appearance  Quality identification method based on Swin Transformer and MLP</papertitle>
+                <papertitle>Swin-MLP A Strawberry Appearance  Quality identification method based on Swin Transformer and multi-layer perceptron</papertitle>
               </a>
               <br>
               <strong>Hao Zheng </strong>,
