--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
               <p></p>
             </td>
           </tr> 
-
+		
+	
         
           <tr onmouseout="malle_stop()" onmouseover="malle_start()">
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -126,6 +127,25 @@
             </td>
           </tr>
 
+	  <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://link.springer.com/article/10.1007/s11694-023-01959-9">
+                <papertitle>ResNeXt-SVM: a novel strawberry appearance quality identification method based on ResNeXt network and support vector machine</papertitle>
+              </a>
+              <br>    
+              <a href="https://booler.github.io/">Guohui Wang </a>,  
+              <strong>Hao Zheng </strong>,
+              Xuchen Li
+              <p></p>
+              <br>
+
+              <em>Frontiers in Physics</em>, 2022; 9:819019   &emsp;<a href="https://doi.org/10.3389/fphy.2021.819019">DOI</a>
+              <br>
+              <p></p>
+              <p></p>
+            </td>
+          </tr>	
+	
           <tr onmouseout="malle_stop()" onmouseover="malle_start()">
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://www.frontiersin.org/articles/10.3389/fphy.2021.817102/full">
@@ -222,7 +242,27 @@
 
         </tbody></table>
 
-
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Rewards</heading>
+            </td>
+          </tr>          
+        </tbody></table>
+		
+		<tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <td style="padding:20px;width:75%;vertical-align:middle">
+          <p>2021-2022学年度《人民日报》全国100面研究生国家奖学金获奖学生优秀代表</p> 
+          </td>
+        </tr>
+		
+		<tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <td style="padding:20px;width:75%;vertical-align:middle">
+          <p>2022年硕士研究生国家奖学金</p> 
+          </td>
+        </tr>
+	
+		
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
@@ -231,12 +271,6 @@
             </td>
           </tr>          
         </tbody></table>
-		
-	<tr onmouseout="malle_stop()" onmouseover="malle_start()">
-          <td style="padding:20px;width:75%;vertical-align:middle">
-          <p>2022年硕士研究生国家奖学金</p> 
-          </td>
-        </tr>
 
 
         <tr onmouseout="malle_stop()" onmouseover="malle_start()">
