--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <p></p>
               <br>
 
-              <em>Frontiers in Physics</em>, 2022; 9:819019   &emsp;<a href="https://doi.org/10.3389/fphy.2021.819019">DOI</a>
+              <em>Journal of Food Measurement and Characterization</em>, 2023 &emsp;<a href="https://doi.org/10.1007/s11694-023-01959-9">DOI</a>
               <br>
               <p></p>
               <p></p>
@@ -247,10 +247,9 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Rewards</heading>
             </td>
-          </tr>          
-        </tbody></table>
-		
-		<tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          </tr>     
+		  
+	<tr onmouseout="malle_stop()" onmouseover="malle_start()">
           <td style="padding:20px;width:75%;vertical-align:middle">
           <p>2021-2022学年度《人民日报》全国100面研究生国家奖学金获奖学生优秀代表</p> 
           </td>
@@ -262,6 +261,9 @@
           </td>
         </tr>
 	
+        </tbody></table>
+		
+
 		
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
