--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 		  
 	<tr onmouseout="malle_stop()" onmouseover="malle_start()">
           <td style="padding:20px;width:75%;vertical-align:middle">
-          <p>2021-2022学年度《人民日报》全国100面研究生国家奖学金获奖学生优秀代表</p> 
+          <p>2021-2022学年度《人民日报》全国100名研究生国家奖学金获奖学生优秀代表</p> 
           </td>
         </tr>
 		
