--- a/index.html
+++ b/index.html
@@ -261,6 +261,18 @@
           </td>
         </tr>
 	
+		<tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <td style="padding:20px;width:75%;vertical-align:middle">
+          <p>2021-2022学年社会奖学金</p> 
+          </td>
+        </tr>
+	
+		  		<tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <td style="padding:20px;width:75%;vertical-align:middle">
+          <p>2020-2021学年一等学业奖学金</p> 
+          </td>
+        </tr>
+		  
         </tbody></table>
 		
 
